@@ -672,6 +672,8 @@ int tcpsetnonblockopt(int fd, const int timeout)
 {
 	int result;
 	int flags;
+
+	/*
 	struct linger linger;
 	struct timeval waittime;
 
@@ -709,6 +711,7 @@ int tcpsetnonblockopt(int fd, const int timeout)
 			__LINE__, errno, strerror(errno));
 		return errno != 0 ? errno : ENOMEM;
 	}
+	*/
 
 	/*
 	{
