@@ -9,8 +9,8 @@ base_path=/home/yuqing/fastdfs
 sync_wait_msec=200
 max_connections=1024
 
-tracker_server=10.62.245.107:22122
 tracker_server=10.62.164.84:22122
+tracker_server=10.62.245.107:22122
 
 #standard log level as syslog, case insensitive, value list:
 ### emerg for emergency
